# azul_cli1

./: .gitignore  .talismanrc  Cargo.toml  user.toml.example
src/: main.rs
