[package]
name = "azul_1"
version = "0.1.0"
authors = ["zfhrp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azul = { git = "https://github.com/maps4print/azul" }
chrono = "0.4.10"
chrono-tz = "0.5.1"
toml = "0.5.6"
serde = "1.0.104"
twitter-api = { git = "https://github.com/ckampfe/twitter-api-rs.git" }
oauth-client = { git = "https://github.com/ckampfe/oauth-client-rs.git" }
futures = "0.3.4"
tokio = "0.2.13"
tokio-executor = "0.1.10"
async-std = "1.5.0"
serde_derive = "1.0.104"
